Fixed: Horizontal overflow of .wedeoSideInfoDescription.

--- a/web/css/main.css
+++ b/web/css/main.css
@@ -486,3 +486,7 @@ mainWedeoContainer.large .wedeoSideContainer {
   height: 50px;
   width: 50px;
 }
+/* description */
+.wedeoSideInfoDescription {
+  word-break: break-word;
+}
